# aria-framework

./: .gitignore  README.md  pyproject.toml
aria/: base_page.py  config.py
pages/: cart_page.py  home_page.py  login_page.py  products_page.py
tests/: conftest.py  test_data.py
tests/ui/: test_e2e_flow.py  test_homepage.py  test_login.py
